--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #333;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+/* 
 body {
   @apply bg-slate-950 text-gray-100 font-sans;
 }
@@ -20,4 +34,4 @@ header {
 
 .button-primary {
   @apply bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-500;
-}
+} */
