--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.169);
 }
 .login-box h1 {
   font-size: 24px;
